--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+telegram==0.0.1
 tinycss2==1.3.0
 tornado==6.4.1
 traitlets==5.14.3
