--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ colorama==0.4.6
 decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
+et-xmlfile==1.1.0
 executing==2.0.1
 fastjsonschema==2.20.0
 h11==0.14.0
@@ -30,6 +31,7 @@ mistune==3.0.2
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
+openpyxl==3.1.5
 packaging==24.1
 pandocfilters==1.5.1
 parso==0.8.4
@@ -50,10 +52,11 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
-telegram==0.0.1
+style==1.1.0
 tinycss2==1.3.0
 tornado==6.4.1
 traitlets==5.14.3
+update==0.0.1
 urllib3==2.2.2
 wcwidth==0.2.13
 webencodings==0.5.1
